ingress/ingress.yaml
---
# Jovies 네임스페이스의 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jovies-ingress
  namespace: jovies
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: jovies.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jovies-service
                port:
                  number: 80
    - host: www.jovies.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jovies-service
                port:
                  number: 80

---
# Portfolio 네임스페이스의 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: mayne.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80

---
# Todo 네임스페이스의 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: todo0213.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 80

---
# Grafana 네임스페이스의 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana0213.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
